Fix gap value in aboutus.scss

--- a/src/containers/AboutUs/aboutus.scss
+++ b/src/containers/AboutUs/aboutus.scss
@@ -21,6 +21,6 @@
     .aboutus {
         flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 20pxnmki8o,l;
     }
 }
